force-app/main/default/objects/Account/fields/Acrd__c.field-meta.xml
<CustomField>
    <fullName>Acrd__c</fullName>
    <label>Acrd</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>