force-app/main/default/objects/Account/fields/customerId__c.field-meta.xml
<CustomField>
    <fullName>customerId__c</fullName>
    <label>customerId</label>
    <length>19</length>
    <type>Text</type>
</CustomField>