force-app/main/default/objects/Account/fields/Type_Of_Day__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Day__c</fullName>
    <label>Type_Of_Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Day</fullName>
            </value>
            <value>
                <fullName>Half Day</fullName>
            </value>
            <value>
                <fullName>Only Morning</fullName>
            </value>
            <value>
                <fullName>Only Evening</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>